--- a/subjects/gate.html
+++ b/subjects/gate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="shortcut icon" type="png" href="../images/icon/favicon.png">
-	<title>Prepare for GATE on LearnEd</title>
+	<title>Prepare for GATE on Itech</title>
 	<link rel="stylesheet" type="text/css" href="subjects.css">
 	<script type="text/javascript" src="../script.js"></script>
 </head>
@@ -12,7 +12,7 @@
 	<header>
 		<div class="nav" id="nav">
 			<div id="learned-logo">
-			<a href="../index.html"><img src="../images/icon/logo.png" style="width: 120px;"></a></div>
+			<a href="../index.html"><img src="../images/icon/logo_low.png" style="width: 120px;"></a></div>
 			<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img src="../images/icon/menu.png"></div>
 			<ul id="list-switch">
 				<li><a href="jee.html"><img src="../images/courses/d1.png" class="icon">JEE</a></li>
@@ -20,8 +20,7 @@
 				<li><a href="computer_courses.html"><img src="../images/courses/computer.png" class="icon">Computer Courses</a></li>
 				<li><a href="computer_courses.html#data"><img src="../images/courses/data.png" class="icon">Data Structures</a></li>
 				<li><a href="computer_courses.html#algo"><img src="../images/courses/algo.png" class="icon">Algorithm</a></li>
-				<li><a href="computer_courses.html#projects"><img src="../images/courses/projects.png" class="icon">Projects</a></li>
-			</ul>
+				</ul>
 			<div class="search" id="search-switch">
 				<input type="text" placeholder="Search" class="srch"><button id="srchbtn"><img src="../images/icon/search.png"></button>
 			</div>
@@ -31,7 +30,7 @@
 
 <!-- Main Title of the Page -->
 	<div class="title">
-		<span>Prepare for GATE Exams on LearnEd</span>
+		<span>Prepare for GATE Exams on Itech</span>
 		<div class="shortdesc">
 			<p>Learn from LearnEd for better higher studies in<br> Indian Institutes of Technologies(IIT)</p>
 		</div>
@@ -587,7 +586,7 @@
 <footer>
 	<div class="footer-container">
 		<div class="left-col">
-			<img src="../images/icon/logo - Copy.png" style="width: 200px;">
+			<img src="../images/icon/logo_low.png" style="width: 200px;">
 			<div class="logo"></div>
 			<div class="social-media">
 				<a href="#"><img src="../images/icon\fb.png"></a>
@@ -596,9 +595,9 @@
 				<a href="#"><img src="../images/icon\ytube.png"></a>
 				<a href="#"><img src="../images/icon\linkedin.png"></a>
 			</div><br><br>
-			<p class="rights-text">Copyright © 2021 Created By Roshan Kumar, Abhishek Dulat All Rights Reserved.</p>
-			<br><p><img src="../images/icon/location.png"> Lovely Professional University<br>Phagwara, Punjab-144401</p><br>
-			<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img src="../images/icon/mail.png">&nbsp; learnedonline9419@gmail.com</p>
+			<p class="rights-text">Copyright © 2022 By Harsh Tambade All Rights Reserved.</p>
+			<br><p><img src="../images/icon/location.png">Itech Computer Education<br>Nallasopara, Mumbai-401209</p><br>
+			<p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img src="../images/icon/mail.png">&nbsp; xyz@gmail.com</p>
 		</div>
 		<div class="right-col">
 			<h1 style="color: #fff">Our Newsletter</h1>
