--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" type="png" href="images/icon/favicon.png">
+	<link rel="shortcut icon" type="png" href="images/icon/logo_low.png">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Comaptible" content="IE=edge">
 	<title>ITech Computer Education</title>
